--- a/editor-app/src/index.css
+++ b/editor-app/src/index.css
@@ -16,3 +16,11 @@ code {
   width: 100%;
   height: 100%;
 }
+
+.annotation-adverb {
+  background-color: #7aecec;
+}
+
+.annotation-passive {
+  background-color: #feca74;
+}
